# cfe-django-ninja-nextjs

./: .gitignore  pyproject.toml  rav.yaml
src/cfehome/: api.py  settings.py  urls.py
src/waitlists/: admin.py  api.py  models.py  schemas.py
src/waitlists/migrations/: 0001_initial.py  0002_waitlistentry_updated.py
